# cloudxy

./: About_SegFile_Handle.md  About_block_Compression.md  CheckList.md  CloudxyDevelopGuide.md  ECMS_Detail_Design.md  ECMS_HIGH_LEVEL_DESIGN.md  EMCS_Development_RoadMap.md  EMCS_RD_Manual.md  HLFS_CACHE_DESIGN.md  HLFS_SUPPORT_QEMU.md  HLFS_Used_In_VM.md  HlfsDesign.md  HlfsDesign_English_Version.md  HlfsFAQ.md  HlfsJoinUs.md  HlfsMultifileDesign.md  HlfsPerformanceOptimizeDesign.md  HlfsSnapshotDesign.md  HlfsUserManual.md  Hlfs_Development_RoadMap.md  HowTo_Build_PV_domU.md  HowTo_Build_Xen_Env.md  HowTo_Build_ttylinux.md  INTEGRATE_HLFS_INTO_LIBVIRT.md  INTEGRATE_HLFS_INTO_OPENSTACK.md  My_Test_Env_Build.md  Optimization_For_Performance.md  ProjectHome.md  README.md  SEGMENT_RECYCLE_WITH_SNAPSHOT_DESIGN.md  SEG_CLEAN_USAGE.md  Set_vm_scene.md  Support_iSCSI.md  WHAT_IS_CLOUDXY.md  one_key_install_config_hlfs_qemu_ibvirt.md  vm_start.md
ECMS/CloudMaster/include/: comm_define.hrl  meta_schema.hrl
branches/XXX/CloudMaster/: cloud_master.rel
branches/harry/hlfs/test/: CMakeLists.txt
branches/hlfs/features/clean/src/clean/Mapreducer/: CMakeLists.txt  mr_clean_route.cpp
branches/hlfs/person/kelvin/hlfs/test/: CMakeLists.txt
branches/kelvin/hlfs/src/snapshot/unit_test/: CMakeLists.txt  append_ss_delmark_test.c  dump_ss_test.c  list_all_snapshot_test.c  load_all_ss_test.c  load_ss_from_text_test.c  load_ss_test.c  rm_snapshot_test.c  ss2text_test.c  take_snapshot_test.c
branches/seg_merge/trunk/hlfs/nbd-2.9.15/: CMakeLists.txt
branches/snapshot/src/: CMakeLists.txt
branches/snapshot/src/snapshot/unittest/: CMakeLists.txt  Test_hlfs_list_all_snapshots.c  test1_hlfs_find_inode_by_name.c  test1_hlfs_find_inode_by_name1.c  test1_hlfs_list_all_snapshots.c  test2.c  test_hlfs_find_inode_before_time.c  test_hlfs_find_inode_by_name.c  test_hlfs_get_inode_info.c  test_hlfs_list_all_snapshots.c  test_hlfs_open_by_inode.c  test_hlfs_rm_snapshot.c  test_hlfs_take_snapshot.c  test_hlfs_tree_snapshots.c  test_take_snapshot.c
branches/snapshot/test/: CMakeLists.txt
features/cache/src/: CMakeLists.txt
features/cache/test/: CMakeLists.txt  test.c
features/clean/src/: CMakeLists.txt
features/clone/src/: CMakeLists.txt
features/compress/: .project
hlfs.backup/nbd-2.9.15/: CMakeLists.txt
hlfs/patches/: hlfs_driver_for_qemu_1.3.0.patch  hlfs_driver_for_tgt.patch
hlfs/scripts/: hlfs_client.sh  hlfs_server.sh
hlfs/src/: CMakeLists.txt  gen_cscope_ctags_files.sh
hlfs/src/clean/Mapreducer/: CMakeLists.txt
hlfs/test/: CMakeLists.txt  data_check.sh  index1.c  index1_1.c  index1_3.c  index2_1.c  index2_2.c  index2_3.c  index2_4.c  index4.c  index4_1.c  test.c  test2.c  test3.c  test4.c  test5.c  test_clean_task.c  test_glib.c
person/zhangdianbo/: hlfs_setup.sh
trunk/hlfs/: .cproject  README.txt  auto_local.sh
trunk/hlfs/src/: CMakeLists.txt
trunk/hlfs/src/backend/: hdfs_storage.c  local_storage.c
trunk/hlfs/src/cache/: cache_destroy.c  cache_helper.c  cache_init.c  cache_insert.c  cache_query.c  cache_set_write_cb.c  cache_sync.c  flush_worker.c
trunk/hlfs/src/cache/unittest/: test_cache.c  test_cache_destroy.c  test_cache_flush.c  test_cache_init.c  test_cache_insert_query.c  test_cache_query.c
trunk/hlfs/src/clean/: load_seg_usage_by_order.c  migrate_alive_blocks.c  seg_clean_helper.c  seg_usage_calc.c  seg_usage_dump.c
trunk/hlfs/src/clean/Mapreducer/: mr_clean_route.cpp
trunk/hlfs/src/clean/unittest/: test_get_refer_inode.c  test_seg_migrate.c  test_seg_usage_calc.c  test_seg_usage_dump.c
trunk/hlfs/src/clone/: clone.c
trunk/hlfs/src/icache/: icache_destroy.c  icache_exist.c  icache_init.c  icache_insert.c  icache_query.c
trunk/hlfs/src/include/: base_ops.h  bs_hdfs.h  bs_local.h  cache.h  cache_helper.h  cmd_define.h  comm_define.h  ctrl_region.h  hlfs_ctrl.h  hlfs_log.h  icache.h  logger.h  seg_clean.h  seg_clean_helper.h  snapshot.h  snapshot_helper.h  storage.h  storage_helper.h
trunk/hlfs/src/include/api/: hlfs.h
trunk/hlfs/src/logger/: block_ops.c  load_block.c  log_ops.c  segfile_handler_optmize.c
trunk/hlfs/src/snapshot/: hlfs_find_inode_before_time.c  hlfs_find_inode_by_name.c  hlfs_get_inode_info.c  hlfs_list_all_snapshots.c  hlfs_open_by_inode.c  hlfs_open_by_snapshot.c  hlfs_rm_snapshot.c  hlfs_take_snapshot.c  snapshot_helper.c  ss_file_ops.c
trunk/hlfs/src/snapshot/unit_test/: CMakeLists.txt
trunk/hlfs/src/snapshot/unittest/: mkfs.hlfs  test_hlfs_find_inode_by_name.c  test_hlfs_get_all_snapshots.c  test_hlfs_get_inode_info.c  test_hlfs_take_snapshot.c
trunk/hlfs/src/storage/: deinit_hlfs.c  hlfs_close.c  hlfs_ctrl.c  hlfs_open.c  hlfs_read.c  hlfs_stat.c  hlfs_write.c  init_hlfs.c  log_write_task.c  seg_clean_task.c
trunk/hlfs/src/tools/: hlfs_clone.c  hlfs_mkfs.c  hlfs_seg_usage_calc.c  hlfs_stat.c  nbd_ops.c
trunk/hlfs/src/utils/: address.c  hlfs_log.c  misc.c  storage_helper.c
trunk/hlfs/test/: CMakeLists.txt  build.sh  data_check3.sh  helloworld.c  index1_2.c  index1_4.c  index2.c  index3.c  index3_1.c  readme.txt  seg_usage.c  seg_usage1.c  test1.c  test_base.c  test_seg.c
wiki/: About_SegFile_Handle.wiki  About_block_Compression.wiki  CheckList.wiki  CloudxyDevelopGuide.wiki  ECMS_Detail_Design.wiki  ECMS_HIGH_LEVEL_DESIGN.wiki  ECMSdesign.wiki  EMCS_Development_RoadMap.wiki  EMCS_RD_Manual.wiki  HLFS_CACHE_DESIGN.wiki  HLFS_SUPPORT_QEMU.wiki  HLFS_Used_In_VM.wiki  HlfsDesign.wiki  HlfsDesign_English_Version.wiki  HlfsFAQ.wiki  HlfsFQA.wiki  HlfsJoinUs.wiki  HlfsMultifileDesign.wiki  HlfsPerformanceOptimizeDesign.wiki  HlfsSnapshotDesign.wiki  HlfsUserManual.wiki  Hlfs_Development_RoadMap.wiki  HowTo_Build_PV_domU.wiki  HowTo_Build_Xen_Env.wiki  HowTo_Build_ttylinux.wiki  INTEGRATE_HLFS_INTO_LIBVIRT.wiki  INTEGRATE_HLFS_INTO_OPENSTACK.wiki  My_Test_Env_Build.wiki  Optimization_For_Performance.wiki  PageName.wiki  SEGMENT_RECYCLE_WITH_SNAPSHOT_DESIGN.wiki  SEG_CLEAN_USAGE.wiki  Set_vm_scene.wiki  Support_iSCSI.wiki  WHAT_IS_CLOUDXY.wiki  one_key_install_config_hlfs_qemu_ibvirt.wiki  test.wiki  vm_start.wiki
(+884 files in other folders)
